--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "heroku-postbuild": "npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -20,10 +20,14 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.6"
+    "mongoose": "^6.4.6",
+    "serve": "^14.0.1"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19"
+  },
+  "engines": {
+    "node": "16.14.2"
   }
 }
